Fix JSON tree overflow

--- a/src/components/jsonTree/jsonTree.module.css
+++ b/src/components/jsonTree/jsonTree.module.css
@@ -17,4 +17,5 @@
     font-family: var(--fontMono);
     font-size: var(--fontSizeXs);
     font-weight: 500;
+    overflow-wrap: anywhere;
 }
